--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.5.0",
-        "ext-mysqlnd": "*"
+        "php": ">=5.5.0"
     }
 }
